==> gitcnd/CAN_Bus_Display/Arduino_UNO_LCD_and_CAN_Bus_ken_altpins/LCDWIKI_SPI.cpp <==
	#include <include/pio.h>
    #define PROGMEM
    #define pgm_read_byte(addr) (*(const unsigned char *)(addr))
    #define pgm_read_word(addr) (*(const unsigned short *)(addr))
#define USE_HWSPI_ONLY
#include <SPI.h>
#include "pins_arduino.h"
#include "wiring_private.h"
#include "LCDWIKI_SPI.h"
#include "lcd_spi_registers.h"
#include "mcu_spi_magic.h"
#define TFTLCD_DELAY16  0xFFFF
#define TFTLCD_DELAY8   0x7F
#define MAX_REG_NUM     24

void LCDWIKI_SPI::Spi_Write(uint8_t data)
{

//#define CND_SPI_HW 1 // SEE ALSO LCDWIKI_SPI and the main .INO file
#ifdef CND_SPI_HW
  /* hardware SPI: - not working */
  #define SPI_DDR     DDRB  
  #define SPI_CS      PINB2 
  #define SPI_MOSI    PINB3
  #define SPI_MISO    PINB4
  #define SPI_SCK     PINB5
  #define SPI_INIT    SPI_DDR |= (1 << SPI_CS) | (1 << SPI_MOSI) | (1 << SPI_SCK); // set CS, MOSI and SCK to output
  #define SPI_INIT2   SPCR = (1 << SPE) | (1 << MSTR) | (0 << SPR1) | (0 << SPR0); SPSR|=(1<<SPI2X); 
  #define SPI_SEND(data) while(!(SPSR & (1 << SPIF))); SPDR = data;

   digitalWrite(SPI_CS,LOW);

    // drive slave select low
    //SPI_DDR &= ~(1 << SPI_CS);
  
  //while(!(SPSR & (1 << SPIF))); 
  SPDR = data;
  while(!(SPSR & (1 << SPIF)));
  //SPI_SEND(data);

  // return slave select to high
  //SPI_DDR |= (1 << SPI_CS);

   digitalWrite(SPI_CS,HIGH);



#else
  //                 76543210
  byte p00=PORTD & 0b11010111; 
  byte p11=  p00 | 0b00101000;
  byte p10=  p00 | 0b00001000;
  byte p01=  p00 | 0b00100000;
  //                     ^ MOSI
  //                   ^ SCK

  if(data==0) { // cnd: this is so common, it overall increases speed by 10%+
    PORTD=p00;PORTD=p01;
    PORTD=p00;PORTD=p01;
    PORTD=p00;PORTD=p01;
    PORTD=p00;PORTD=p01;
    PORTD=p00;PORTD=p01;
    PORTD=p00;PORTD=p01;
    PORTD=p00;PORTD=p01;
    PORTD=p00;PORTD=p01;
  } else {

if(data&0x80){PORTD = p10;PORTD = p11;} else {PORTD = p00;PORTD = p01;}
if(data&0x40){PORTD = p10;PORTD = p11;} else {PORTD = p00;PORTD = p01;}
if(data&0x20){PORTD = p10;PORTD = p11;} else {PORTD = p00;PORTD = p01;}
if(data&0x10){PORTD = p10;PORTD = p11;} else {PORTD = p00;PORTD = p01;}
if(data&0x08){PORTD = p10;PORTD = p11;} else {PORTD = p00;PORTD = p01;}
if(data&0x04){PORTD = p10;PORTD = p11;} else {PORTD = p00;PORTD = p01;}
if(data&0x02){PORTD = p10;PORTD = p11;} else {PORTD = p00;PORTD = p01;}
if(data&0x01){PORTD = p10;PORTD = p11;} else {PORTD = p00;PORTD = p01;}

  }
#endif
  
}

uint8_t LCDWIKI_SPI::Spi_Read(void)
{
	if(hw_spi)
	{
		return SPI.transfer(0);
	}
	else
	{
		uint8_t val,i,d;
		for(i = 0;i<8; i++)
		{
			CLK_LOW; 
			CLK_HIGH;
			val <<= 1;
			MISO_STATE(d);
			if(d)
			{
				val |= 0x01;
			}
		}
		return val;
	}
}
