==> sprlightning/LCDWIKI-drivers-idf/src/LCDWIKI_SPI/LCDWIKI_SPI.cpp <==
	#include <include/pio.h>
    #define PROGMEM
    #define pgm_read_byte(addr) (*(const unsigned char *)(addr))
    #define pgm_read_word(addr) (*(const unsigned short *)(addr))
#define USE_HWSPI_ONLY
#include "LCDWIKI_SPI.h"
#include "lcd_spi_registers.h"
#include "mcu_spi_magic.h"
#define USED_SPI_HOST SPI3_HOST
#define TFTLCD_DELAY16  0xFFFF
#define TFTLCD_DELAY8   0x7F
#define MAX_REG_NUM     24

void LCDWIKI_SPI::Spi_Write(uint8_t data)
{
	if(hw_spi)
	{
		// SPI.transfer(data);
		spi_transaction_t t = {};
        t.length = 8;  // 8位数据
        t.tx_buffer = &data;
        esp_err_t ret = spi_device_transmit(spi_dev, &t);
        if (ret != ESP_OK) {
            ESP_LOGE(TAG, "SPI写入失败: %s", esp_err_to_name(ret));
        }
	}
	else
	{
		uint8_t val = 0x80;
		while(val)
		{
			if(data&val)
			{
				MOSI_HIGH; 
			}
			else
			{
				MOSI_LOW;
			}
			CLK_LOW;
			CLK_HIGH;
			val >>= 1;
		}
	}
}

uint8_t LCDWIKI_SPI::Spi_Read(void)
{
	if(hw_spi)
	{
		// return SPI.transfer(0xFF);
		uint8_t data, dummy = 0xFF;
		spi_transaction_t t = {};
        t.length = 8;
        t.rx_buffer = &data;
        t.tx_buffer = &dummy;  // 发送 dummy 数据
        esp_err_t ret = spi_device_transmit(spi_dev, &t);
        if (ret != ESP_OK) {
            ESP_LOGE(TAG, "SPI读取失败: %s", esp_err_to_name(ret));
            return 0;
        }
        return data;
	}
	else
	{
		uint8_t val = 0,i,d;
		for(i = 0;i<8; i++)
		{
			CLK_LOW; 
			CLK_HIGH;
			val <<= 1;
			MISO_STATE(d);
			if(d)
			{
				val |= 0x01;
			}
		}
		return val;
	}
}
